Hide web notification tray when LoginStatus is locked

BUG=625357
TEST=manual test: locked screen state will see web notification tray be hidden and shown when logged in

Review-Url: https://codereview.chromium.org/2120033002
Cr-Commit-Position: refs/heads/master@{#403955}

Former-commit-id: 198e264eb577cab76a6cb13d1d8b4b5d0135cb3c