ash/common/system/web_notification/web_notification_tray.cc
@@ -516,9 +516,9 @@ message_center::MessageCenter* WebNotificationTray::message_center() const {
 
 bool WebNotificationTray::IsLoggedIn() const {
   WmShell* shell = WmShell::Get();
-  // TODO(jamescook): Should this also check LoginState::LOCKED?
-  return shell->system_tray_delegate()->GetUserLoginStatus() !=
-             LoginStatus::NOT_LOGGED_IN &&
+  LoginStatus status = shell->system_tray_delegate()->GetUserLoginStatus();
+  return status != LoginStatus::NOT_LOGGED_IN &&
+         status != LoginStatus::LOCKED &&
          !shell->GetSessionStateDelegate()->IsInSecondaryLoginScreen();
 }
 
